--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.17.4",
-    "less": "^3.0.0-alpha.3",
+    "less": "^2.3.1",
     "less-loader": "^4.0.5",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
