1. 引入element-ui的提示加载组件 2.播放功能初步调整完毕

--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,15 @@
 {
-	"presets": [
-		"es2015", 
-		"stage-0",
+	'presets': [
+		['es2015', { 'modules': false }],
+		'stage-0',
 	],
-	"plugins": ["transform-runtime"]
+	'plugins': [
+        'transform-runtime',
+        ['component', [
+            {
+                'libraryName': 'element-ui',
+                'styleLibraryName': 'theme-default'
+            }
+        ]]
+    ]
 }
