--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/snow-imprint/music-player-vue2#readme",
   "dependencies": {
     "axios": "^0.16.2",
+    "element-ui": "^1.4.7",
     "vue": "^2.4.4",
     "vue-router": "^2.7.0",
     "vuex": "^2.4.1"
@@ -28,6 +29,7 @@
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.1",
     "babel-loader": "^7.1.2",
+    "babel-plugin-component": "^0.10.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
