1. 更换UI框架为mint-ui 2.移除原有的loading组件，去除收藏功能

--- a/.babelrc
+++ b/.babelrc
@@ -7,8 +7,8 @@
         'transform-runtime',
         ['component', [
             {
-                'libraryName': 'element-ui',
-                'styleLibraryName': 'theme-default'
+                'libraryName': 'mint-ui',
+                'style': true
             }
         ]]
     ]
