--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "homepage": "https://github.com/snow-imprint/music-player-vue2#readme",
   "dependencies": {
     "axios": "^0.16.2",
-    "element-ui": "^1.4.7",
+    "mint-ui": "^2.2.9",
     "vue": "^2.4.4",
     "vue-router": "^2.7.0",
     "vuex": "^2.4.1"
@@ -33,6 +33,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "copy-webpack-plugin": "^4.2.0",
     "css-loader": "^0.28.7",
     "cssnano": "^3.10.0",
     "eslint": "^4.8.0",
