1. 打包完成，增加打包后文件夹dist 2.增加express启动项，启动打包后的目录

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": ".eslintrc.js",
   "scripts": {
     "dev": "set NODE_ENV=development&&node build/dev-server.js",
-    "build": "set NODE_ENV=production&&node build/build.js"
+    "build": "set NODE_ENV=production&&node build/build.js",
+    "start": "node express/index.js"
   },
   "repository": {
     "type": "git",
