--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "postcss-loader": "^2.1.3",
     "rimraf": "^2.6.2",
     "style-loader": "^0.20.3",
+    "uglifyjs-webpack-plugin": "^1.2.4",
     "url-loader": "^1.0.1",
     "vue-loader": "^14.2.2",
     "vue-style-loader": "^4.1.0",
