--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-music-player",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "> A Vue.js project",
   "main": "src/main.js",
   "scripts": {
@@ -19,53 +19,48 @@
   },
   "homepage": "https://github.com/snow-imprint/vue-music-player#readme",
   "dependencies": {
-    "axios": "^0.18.0",
-    "mint-ui": "^2.2.13",
-    "vue": "^2.5.16",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "express": "^4.16.3"
   },
   "devDependencies": {
-    "autoprefixer": "^8.2.0",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.2",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-component": "^1.1.0",
+    "autoprefixer": "^9.0.0",
+    "axios": "^0.18.0",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.6",
+    "babel-loader": "^7.1.5",
+    "babel-plugin-component": "^1.1.1",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-stage-0": "^6.24.1",
     "copy-webpack-plugin": "^4.5.1",
-    "css-loader": "^0.28.11",
-    "cssnano": "^3.10.0",
-    "eslint": "^4.19.1",
-    "eslint-config-standard": "^11.0.0",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-html": "^4.0.2",
-    "eslint-plugin-import": "^2.10.0",
-    "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-promise": "^3.7.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "express": "^4.16.3",
+    "css-loader": "^1.0.0",
+    "cssnano": "^4.0.3",
+    "eslint": "^5.1.0",
+    "eslint-loader": "^2.1.0",
+    "eslint-plugin-import": "^2.13.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "http-proxy-middleware": "^0.18.0",
-    "less": "^3.0.1",
+    "less": "^3.7.1",
     "less-loader": "^4.1.0",
-    "mini-css-extract-plugin": "^0.4.0",
+    "mini-css-extract-plugin": "^0.4.1",
+    "mint-ui": "^2.2.13",
     "opn": "^5.3.0",
-    "optimize-css-assets-webpack-plugin": "^4.0.0",
-    "ora": "^2.0.0",
-    "postcss-loader": "^2.1.3",
+    "optimize-css-assets-webpack-plugin": "^5.0.0",
+    "ora": "^3.0.0",
+    "postcss-loader": "^2.1.6",
     "rimraf": "^2.6.2",
-    "style-loader": "^0.20.3",
-    "uglifyjs-webpack-plugin": "^1.2.4",
+    "style-loader": "^0.21.0",
+    "uglifyjs-webpack-plugin": "^1.2.7",
     "url-loader": "^1.0.1",
-    "vue-loader": "^14.2.2",
-    "vue-style-loader": "^4.1.0",
+    "vue": "^2.5.16",
+    "vue-loader": "^15.2.6",
+    "vue-router": "^3.0.1",
+    "vue-style-loader": "^4.1.1",
     "vue-template-compiler": "^2.5.16",
-    "webpack": "^4.5.0",
-    "webpack-dev-middleware": "^3.1.2",
-    "webpack-hot-middleware": "^2.22.0",
-    "webpack-merge": "^4.1.2"
+    "vuex": "^3.0.1",
+    "webpack": "^4.16.1",
+    "webpack-dev-middleware": "^3.1.3",
+    "webpack-hot-middleware": "^2.22.3",
+    "webpack-merge": "^4.1.3"
   }
 }
