--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "css-loader": "^1.0.0",
     "cssnano": "^4.0.3",
     "eslint": "^5.1.0",
+    "eslint-config-airbnb-base": "^13.0.0",
     "eslint-loader": "^2.1.0",
     "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-vue": "^4.7.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "http-proxy-middleware": "^0.18.0",
