--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "homepage": "https://github.com/snow-imprint/vue-music-player#readme",
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "http-proxy-middleware": "^0.18.0"
   },
   "devDependencies": {
     "autoprefixer": "^9.0.0",
@@ -41,7 +42,6 @@
     "eslint-plugin-vue": "^4.7.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
-    "http-proxy-middleware": "^0.18.0",
     "less": "^3.7.1",
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.4.1",
