--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/snow-imprint/vue-music-player#readme",
   "dependencies": {
+    "connect-history-api-fallback": "^1.5.0",
     "express": "^4.16.3",
     "http-proxy-middleware": "^0.18.0"
   },
