--- a/package.json
+++ b/package.json
@@ -51,9 +51,12 @@
     "postcss-loader": "^3.0.0",
     "rimraf": "^2.6.3",
     "style-loader": "^0.23.1",
+    "ts-loader": "^5.3.3",
+    "typescript": "^3.4.1",
     "uglifyjs-webpack-plugin": "^2.1.2",
     "url-loader": "^1.1.2",
     "vue": "^2.6.10",
+    "vue-class-component": "^7.0.2",
     "vue-loader": "^15.7.0",
     "vue-router": "^3.0.2",
     "vue-template-compiler": "^2.6.10",
